--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="flex flex-col items-center mt-20 md:mt-40">
+  <div class="flex flex-col items-center mt-20">
     <%= tag.h2 "Seja bem vindo(a), #{@doctor.name}!" if @doctor.user == current_user %>
 
     <div class="mt-8 w-full flex justify-center">
